// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneGroup matches snapshot 1`] = `
<ZoneGroup
  group={
    Array [
      Object {
        "coordinator": "true",
        "host": "myhost",
        "member": 1,
      },
    ]
  }
  playStates={
    Object {
      "myhost": Object {
        "playing": true,
      },
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="not-selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "coordinator": "true",
            "host": "myhost",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPLayState
      playState={
        Object {
          "playing": true,
        }
      }
    >
      <p
        className="play-state"
      />
    </ZoneGroupPLayState>
  </div>
</ZoneGroup>
`;

exports[`ZoneGroup matches snapshot when selected 1`] = `
<ZoneGroup
  currentHost="myhost"
  group={
    Array [
      Object {
        "coordinator": "true",
        "host": "myhost",
        "member": 1,
      },
    ]
  }
  playStates={
    Object {
      "myhost": Object {
        "playing": true,
      },
    }
  }
  selectGroup={[MockFunction]}
  showManagement={[MockFunction]}
>
  <div
    className="selected zone-group"
    onClick={[Function]}
  >
    <ul>
      <Component
        key="0"
        member={
          Object {
            "coordinator": "true",
            "host": "myhost",
            "member": 1,
          }
        }
      >
        <p
          className="member"
        />
      </Component>
    </ul>
    <div
      className="group-button"
      onClick={[Function]}
    >
      Group
    </div>
    <ZoneGroupPLayState
      playState={
        Object {
          "playing": true,
        }
      }
    >
      <p
        className="play-state"
      />
    </ZoneGroupPLayState>
  </div>
</ZoneGroup>
`;
